--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   },
   "dependencies": {
     "babel-runtime": "^6.20.0",
+    "bootstrap": "^4.0.0-beta",
+    "jquery": "^3.2.1",
     "meteor-node-stubs": "~0.2.4",
+    "popper.js": "^1.12.5",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-router-dom": "^4.2.2"
