--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
   "name": "saffa",
+  "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "start": "meteor run"
-  },
   "dependencies": {
-    "babel-runtime": "^6.20.0",
-    "bootstrap": "^4.0.0-beta",
-    "jquery": "^3.2.1",
-    "meteor-node-stubs": "~0.2.4",
-    "popper.js": "^1.12.5",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "react-router-dom": "^4.2.2"
+    "react-scripts": "1.0.17"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
